versions/v2.10/modules/en/pages/installation-and-upgrade/other-installation-methods/http-proxy/install-rancher.adoc
= 3. Install {rancher-product-name}
:page-languages: [en, zh] 
:revdate: 2026-07-14
:page-revdate: {revdate}
:community-path: getting-started/installation-and-upgrade/other-installation-methods/rancher-behind-an-http-proxy/install-rancher.adoc 
:product-path: installation-and-upgrade/other-installation-methods/http-proxy/install-rancher.adoc
ifeval::["{build-type}" != "community"]
:xref-helm-chart-options: xref:installation-and-upgrade/references/helm-chart-options.adoc
:xref-tls-secrets: xref:installation-and-upgrade/resources/tls-secrets.adoc
:xref-install-upgrade-troubleshooting: xref:installation-and-upgrade/troubleshooting/troubleshooting.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-helm-chart-options: xref:getting-started/installation-and-upgrade/installation-references/helm-chart-options.adoc
:xref-tls-secrets: xref:getting-started/installation-and-upgrade/resources/add-tls-secrets.adoc
:xref-install-upgrade-troubleshooting: xref:getting-started/installation-and-upgrade/install-upgrade-on-a-kubernetes-cluster/troubleshooting.adoc
endif::[]


Now that you have a running RKE cluster, you can install Rancher in it. For security reasons all traffic to Rancher must be encrypted with TLS. For this tutorial you are going to automatically issue a self-signed certificate through https://cert-manager.io/[cert-manager]. In a real-world use-case you will likely use Let's Encrypt or provide your own certificate.

== Install the Helm CLI

Install the https://helm.sh/docs/intro/install/[Helm] CLI on a host where you have a kubeconfig to access your Kubernetes cluster:

[,shell]
----
curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3
chmod +x get_helm.sh
sudo ./get_helm.sh
----

== Install cert-manager

ifeval::["{build-type}" != "community"]
=== Using SUSE Application Collection

https://docs.apps.rancher.io/[SUSE Application Collection] provides a cert-manager chart that is compatible with Rancher. If you are using SUSE Application Collection, we recommend installing cert-manager using this option. 

. Log in to the secure SUSE Application Collection registry:
+
Before installing, https://docs.apps.rancher.io/get-started/authentication[authenticate your Helm CLI] against the Application Collection OCI registry using your enterprise credentials:
+
[source,shell]
----
helm registry login dp.apps.rancher.io -u <username-or-service-account-username> -p <access-token-or-service-account-token>
----

. Create the target namespace `cert-manager`:
+
[source,shell]
----
kubectl create namespace cert-manager
----

. Create the Image Pull Secret:
+
Because the Application Collection is a private registry, your cluster's nodes need a secret to pull the images. Generate this secret in the `cert-manager` namespace:
+
[source,shell]
----
kubectl create secret docker-registry application-collection \
  --namespace cert-manager \
  --docker-server=dp.apps.rancher.io \
  --docker-username=<YOUR_APPCO_USERNAME> \
  --docker-password=<YOUR_APPCO_TOKEN>
----

. Install cert-manager via the OCI chart path:
+
Deploy the chart directly from the OCI registry path. Ensure you pass the `global.imagePullSecrets` flag so the pods can authenticate:
+
[source,shell]
----
helm install <cert-manager-release-version> oci://dp.apps.rancher.io/charts/cert-manager \
    --namespace cert-manager \
    --set global.imagePullSecrets={application-collection} \
    --set crds.enabled=true
----
+
[NOTE]
====
If you are deploying in a cluster that requires FIPS cryptography compliance, you can substitute the chart path with `oci://dp.apps.rancher.io/charts/cert-manager-fips`.
====

. Verify the Installation.
+
Once you've installed cert-manager, you can verify it is deployed correctly by checking the `cert-manager` namespace for running pods:
+
[source,shell]
----
kubectl get pods --namespace cert-manager
----
+
[source,shell]
----
NAME                                       READY   STATUS    RESTARTS   AGE
cert-manager-56cc584bd4-nhjx7              1/1     Running   0          3m
cert-manager-cainjector-7cfc74b84b-kg7m2   1/1     Running   0          3m
cert-manager-webhook-784f6dd68-69dvn       1/1     Running   0          3m
----
endif::[]

=== Using Upstream Jetstack Helm Repository

Add the cert-manager Helm repository:

[,shell]
----
helm repo add jetstack https://charts.jetstack.io
----

Create a namespace for cert-manager:

[,shell]
----
kubectl create namespace cert-manager
----

Install the CustomResourceDefinitions of cert-manager:

[,shell]
----
kubectl apply -f https://github.com/cert-manager/cert-manager/releases/download/<VERSION>/cert-manager.crds.yaml
----

And install it with Helm. Note that cert-manager also needs your proxy configured in case it needs to communicate with Let's Encrypt or other external certificate issuers:

[NOTE]
====

To see options on how to customize the cert-manager install (including for cases where your cluster uses PodSecurityPolicies), see the https://artifacthub.io/packages/helm/cert-manager/cert-manager#configuration[cert-manager docs].
====


[,shell]
----
helm upgrade --install cert-manager jetstack/cert-manager \
  --namespace cert-manager \
  --set http_proxy=http://${proxy_host} \
  --set https_proxy=http://${proxy_host} \
  --set no_proxy=127.0.0.0/8\\,10.0.0.0/8\\,cattle-system.svc\\,172.16.0.0/12\\,192.168.0.0/16\\,.svc\\,.cluster.local
----

Now you should wait until cert-manager is finished starting up:

[,shell]
----
kubectl rollout status deployment -n cert-manager cert-manager
kubectl rollout status deployment -n cert-manager cert-manager-webhook
----

== Install {rancher-product-name}

Next you can install {rancher-product-name} itself. First, add the Helm repository:

[sh,subs="attributes+"]
----
helm repo add {rancher-helm-repo} <helm-chart-repo-url>
----

ifeval::["{build-type}" == "product"]
include::shared:ROOT:partial$en/helm-chart-repo-url.adoc[]
endif::[]

Create a namespace:

[,shell]
----
kubectl create namespace cattle-system
----

And install Rancher with Helm. Rancher also needs a proxy configuration so that it can communicate with external application catalogs or retrieve Kubernetes version update metadata:

[sh,subs="attributes+"]
----
helm upgrade --install rancher {rancher-helm-repo}/rancher \
   --namespace cattle-system \
   --set hostname=rancher.example.com \
   --set proxy=http://$\{proxy_host} \
   --set noProxy=127.0.0.0/8\\,10.0.0.0/8\\,cattle-system.svc\\,172.16.0.0/12\\,192.168.0.0/16\\,.svc\\,.cluster.local
----

After waiting for the deployment to finish:

[,shell]
----
kubectl rollout status deployment -n cattle-system rancher
----

You can now navigate to `+https://rancher.example.com+` and start using Rancher.

== Additional Resources

These resources could be helpful when installing Rancher:

* {xref-helm-chart-options}[Rancher Helm chart options]
* {xref-tls-secrets}[Adding TLS secrets]
* {xref-install-upgrade-troubleshooting}[Troubleshooting Rancher Kubernetes Installations]
